# pr-guardian

./: .env.example  .gitignore  Caddyfile  README.md  gui.py  install.sh  launch.sh  launch_dev.sh  package.json  pyproject.toml  shutdown.sh  style.css  vite.config.ts
backend/: github_utils.py  graph.py  gui.py  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.tsx  vite-env.d.ts
scripts/: check_paths.py  debug_imports.py  minimal_test.py
src/pr_guardian/: github_utils.py  graph copy.py  graph.py  main.py
tests/: conftest.py  test_factory.py  test_full_app.py  test_full_coverage.py  test_graph.py  test_gui.py  test_review.py  test_system.py
tests/integration/: test_api.py  test_api_workflow.py  test_integration.py
tests/ui/: test_gui.py  test_gui_view.py
tests/unit/: test_graph_local.py  test_graph_logic.py  test_unit.py
